// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can select a pattern that matches multiple files 1`] = `

[MOCK - cursorLeft]

 pattern › f
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Pattern matches 4 files

 › src/foo.js

 › src/file-1.js

 › src/file-2.js

 › src/file_(xyz).js
[MOCK - cursorTo(12, 5)]
[MOCK - cursorRestorePosition]

[MOCK - cursorLeft]

 pattern › fi
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Pattern matches 3 files

 › src/file-1.js

 › src/file-2.js

 › src/file_(xyz).js
[MOCK - cursorTo(13, 5)]
[MOCK - cursorRestorePosition]
`;

exports[`can select a specific file that includes a regexp special character 1`] = `

[MOCK - cursorLeft]

 pattern › x
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Pattern matches 1 file

 › src/file_(xyz).js
[MOCK - cursorTo(12, 5)]
[MOCK - cursorRestorePosition]

[MOCK - cursorLeft]

 pattern › xy
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Pattern matches 1 file

 › src/file_(xyz).js
[MOCK - cursorTo(13, 5)]
[MOCK - cursorRestorePosition]

[MOCK - cursorLeft]

 pattern › xyz
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Pattern matches 1 file

 › src/file_(xyz).js
[MOCK - cursorTo(14, 5)]
[MOCK - cursorRestorePosition]
`;

exports[`can use arrows to select a specific file 1`] = `

[MOCK - cursorLeft]

 pattern › f
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Pattern matches 4 files

 › src/foo.js

 › src/file-1.js

 › src/file-2.js

 › src/file_(xyz).js
[MOCK - cursorTo(12, 5)]
[MOCK - cursorRestorePosition]

[MOCK - cursorLeft]

 pattern › fi
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Pattern matches 3 files

 › src/file-1.js

 › src/file-2.js

 › src/file_(xyz).js
[MOCK - cursorTo(13, 5)]
[MOCK - cursorRestorePosition]

[MOCK - cursorLeft]

 pattern › fi
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Pattern matches 3 files

 › src/file-1.js

 › src/file-2.js

 › src/file_(xyz).js
[MOCK - cursorTo(13, 5)]
[MOCK - cursorRestorePosition]
`;

exports[`file matching is case insensitive 1`] = `

[MOCK - cursorLeft]

 pattern › fI
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Pattern matches 3 files

 › src/file-1.js

 › src/file-2.js

 › src/file_(xyz).js
[MOCK - cursorTo(13, 5)]
[MOCK - cursorRestorePosition]
`;

exports[`shows the correct initial state 1`] = `
[MOCK - cursorHide]
[MOCK - clear]

Pattern Mode Usage
 › Press Esc to exit pattern mode.
 › Press Enter to filter by a filenames regex pattern.


[MOCK - cursorShow]

[MOCK - cursorLeft]

 pattern › 
[MOCK - cursorSavePosition]
[MOCK - cursorLeft]


 Start typing to filter by a filename regex pattern.
[MOCK - cursorTo(11, 5)]
[MOCK - cursorRestorePosition]
`;
